--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,12 @@ name = "pypi"
 [packages]
 tensorflow = "*"
 streamlit = "*"
+seaborn = "*"
+matplotlib = "*"
+opencv-python = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
